Remove dependency to Java 8 java.util.Base64 class.